# Mammoth

./: .env.example  .gitignore  BUILDING.md  features.md  index.html  package-lock.json  package.json  plan.md  todo.md
.github/workflows/: build.yml  ci.yml
docker/: docker-compose.yml
docker/mattermost/config/: config.json
docker/postgres/: postmaster.pid
docker/postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
docker/postgres/pg_subtrans/: 0000
docker/postgres/pg_xact/: 0000
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  notifications.rs  tray.rs
src-tauri/src/commands/: auth.rs  channel_mgmt.rs  channels.rs  custom_status.rs  files.rs  messages.rs  mod.rs  profile.rs  reactions.rs  search.rs  servers.rs  sidebar.rs  teams.rs  threads.rs
src-tauri/src/mattermost/: client.rs  events.rs  mod.rs  types.rs  websocket.rs
src-tauri/src/mattermost/endpoints/: auth.rs  channels.rs  mod.rs  posts.rs  status.rs  teams.rs  users.rs
src-tauri/src/state/: app_state.rs  mod.rs  server_state.rs
src-tauri/src/storage/: config.rs
src/components/auth/: LoginForm.tsx  ServerUrlInput.tsx
src/components/channel/: ChannelInfoPanel.tsx  CreateChannelModal.tsx
src/hooks/: useChannelDrag.ts  useCustomEmojiImage.ts  useTauriDragDrop.ts  useUserAvatar.ts  useWebSocket.ts
src/stores/: customEmojiStore.ts  lastViewedSnapshot.ts  messagesStore.ts  reactionsStore.ts  settingsStore.ts  tabsStore.ts  threadsStore.ts  uiStore.ts
src/styles/: global.css
(+489 files in other folders)
