[package]
name = "mattermost-desktop"
version = "0.1.0"
description = "Cross-platform Mattermost desktop client"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "devtools"] }
png = "0.17"
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
mac-notification-sys = "0.6"
base64 = "0.22"
